tests/semantic_errors/andrei17_3.tl
require "ifj21"

global name : function (integer)
function name    (a : integer) end

function main(abc : integer)
    local id : integer = abc
    local id : string
end

main(12)
